@@ -73,7 +73,7 @@ AC_PROG_CPP
 
 dnl added -Wall for gcc, what about for others?
 if test "x$GCC" = "xyes"; then
-  CFLAGS="$CFLAGS -Wall"
+  CFLAGS="$CFLAGS -Wall -Wno-implicit-int"
 fi
 
 dnl Help finding POSIX functions on some systems
