@@ -1,3 +1,12 @@
+2002-04-18  Hippo
+
+	* configure.in:
+	added -Wno-implicit-int to -Wall in case of gcc
+
+	* fvwm/colorset.c:
+	* fvwm/fvwm.c:
+	fixed ReadWriteColors on a PseudoColor display
+
 2002-04-18  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/move_resize.c (move_window_doit):
